--- a/Audit/App.config
+++ b/Audit/App.config
@@ -5,6 +5,7 @@
     <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="DBSubscriptionStorageConfig" type="NServiceBus.Config.DBSubscriptionStorageConfig, NServiceBus.NHibernate" />
+    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
   </configSections>
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="audit.error" />
   <appSettings>
@@ -23,10 +24,9 @@
   <UnicastBusConfig>
     <MessageEndpointMappings>
       <add Assembly="Messages" Type="Messages.Events.HubConnectionEvent" Endpoint="Hub" />
-      <add Assembly="Messages" Type="Messages.Commands.CompleteAgreementSagaCommand" Endpoint="Saga" />      
+      <add Assembly="Messages" Type="Messages.Commands.CompleteAgreementSagaCommand" Endpoint="Saga" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
-
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
@@ -72,4 +72,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <!--<AuditConfig 
+    QueueName="The address to which messages received will be forwarded."
+    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <AuditConfig QueueName="audit" />
 </configuration>
