updated to use nsb host

--- a/HubSubscriber/App.config
+++ b/HubSubscriber/App.config
@@ -21,8 +21,7 @@
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <TransportConfig MaxRetries="5" MaximumConcurrencyLevel="1" MaximumMessageThroughputPerSecond="1" />
-  <connectionStrings>
-  </connectionStrings>
+  <connectionStrings></connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
@@ -34,4 +33,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <!--<AuditConfig 
+    QueueName="The address to which messages received will be forwarded."
+    OverrideTimeToBeReceived="The time to be received set on forwarded messages, specified as a timespan see http://msdn.microsoft.com/en-us/library/vstudio/se73z7b9.aspx"  />-->
+  <AuditConfig QueueName="audit" />
 </configuration>
