--- a/HubSubscriber/packages.config
+++ b/HubSubscriber/packages.config
@@ -6,6 +6,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NServiceBus" version="5.2.12" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
   <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net452" />
   <package id="Topshelf" version="3.2.0" targetFramework="net452" />
 </packages>
