--- a/Hub/Hub.csproj
+++ b/Hub/Hub.csproj
@@ -117,6 +117,10 @@
       <HintPath>..\packages\NServiceBus.5.2.9\lib\net45\NServiceBus.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NServiceBus.Host, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NServiceBus.Host.6.0.0\lib\net45\NServiceBus.Host.exe</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NServiceBus.NHibernate, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <HintPath>..\packages\NServiceBus.NHibernate.6.2.5\lib\net45\NServiceBus.NHibernate.dll</HintPath>
       <Private>True</Private>
@@ -166,11 +170,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AcknowledgementController.cs" />
-    <Compile Include="Extensions\BusConfigurationExtensions.cs" />
+    <Compile Include="EndpointConfig.cs" />
     <Compile Include="Extensions\ContainerBuilderExtensions.cs" />
     <Compile Include="Handlers\InsertDocumentIntoRemoteBackOfficeCommandHandler.cs" />
     <Compile Include="Hubs\BackOfficeHub.cs" />
-    <Compile Include="IServiceHost.cs" />
     <Compile Include="BrokerConnection.cs" />
     <Compile Include="Managers\BrokerConnectionManager.cs" />
     <Compile Include="Managers\IBrokerConnectionManager.cs" />
@@ -178,7 +181,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ConfigurationProvider.cs" />
     <Compile Include="Providers\TokenProvider.cs" />
-    <Compile Include="ServiceHost.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -222,4 +224,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <StartAction>Program</StartAction>
+    <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
+  </PropertyGroup>
 </Project>
