--- a/OnlineBackOffice/packages.config
+++ b/OnlineBackOffice/packages.config
@@ -5,6 +5,7 @@
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
   <package id="NServiceBus" version="5.2.12" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
   <package id="NServiceBus.NHibernate" version="6.2.5" targetFramework="net452" />
   <package id="Topshelf" version="3.3.1" targetFramework="net452" />
 </packages>
