--- a/Saga/Saga.csproj
+++ b/Saga/Saga.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\NServiceBus.5.2.9\lib\net45\NServiceBus.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NServiceBus.Host, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NServiceBus.Host.6.0.0\lib\net45\NServiceBus.Host.exe</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NServiceBus.NHibernate, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
       <HintPath>..\packages\NServiceBus.NHibernate.6.2.4\lib\net45\NServiceBus.NHibernate.dll</HintPath>
       <Private>True</Private>
@@ -85,14 +89,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointConfig.cs" />
-    <Compile Include="IServiceHost.cs" />
     <Compile Include="Sagas\AgreementSaga.cs" />
     <Compile Include="Sagas\AgreementSagaData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Extensions\BusConfigurationExtensions.cs" />
     <Compile Include="Extensions\ContainerBuilderExtensions.cs" />
-    <Compile Include="ServiceHost.cs" />
     <Compile Include="Strategies\IBackOfficeStrategy.cs" />
     <Compile Include="Strategies\OnlineStrategy.cs" />
     <Compile Include="Strategies\RemoteStrategy.cs" />
