--- a/Saga/packages.config
+++ b/Saga/packages.config
@@ -5,6 +5,7 @@
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
   <package id="NServiceBus" version="5.2.9" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
   <package id="NServiceBus.NHibernate" version="6.2.4" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
