--- a/Hub/App.config
+++ b/Hub/App.config
@@ -74,6 +74,48 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.diagnostics>
+    <sources>
+      <source name="SignalR.Transports.WebSocketTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.ServerSentEventsTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.ForeverFrameTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.LongPollingTransport">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.Transports.TransportHeartBeat">
+        <listeners>
+          <add name="SignalR-Transports" />
+        </listeners>
+      </source>
+      <source name="SignalR.ReflectedHubDescriptorProvider">
+        <listeners>
+          <add name="SignalR-Init" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="SignalRSwitch" value="Verbose" />
+    </switches>
+    <sharedListeners>
+      <add name="SignalR-Transports" type="Logger.Log4NetTraceListener, Logger" />
+      <add name="SignalR-Init" type="Logger.Log4NetTraceListener, Logger" />
+    </sharedListeners>
+    <trace autoflush="true" />
+  </system.diagnostics>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
