--- a/HubSubscriber/packages.config
+++ b/HubSubscriber/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
+  <package id="log4net" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="NServiceBus" version="5.2.12" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
   <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Log4Net" version="1.0.0" targetFramework="net452" />
   <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net452" />
   <package id="Topshelf" version="3.2.0" targetFramework="net452" />
 </packages>
