--- a/Audit/packages.config
+++ b/Audit/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.WebApi2.Owin" version="3.3.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
+  <package id="log4net" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.0" targetFramework="net452" />
@@ -21,6 +22,7 @@
   <package id="NServiceBus" version="5.2.11" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
   <package id="NServiceBus.Host" version="5.0.9" targetFramework="net452" />
+  <package id="NServiceBus.Log4Net" version="1.0.0" targetFramework="net452" />
   <package id="NServiceBus.NHibernate" version="6.2.5" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
