--- a/DocumentDownloader/packages.config
+++ b/DocumentDownloader/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
+  <package id="log4net" version="2.0.0" targetFramework="net452" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net452" />
   <package id="NServiceBus" version="5.2.9" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
   <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Log4Net" version="1.0.0" targetFramework="net452" />
   <package id="NServiceBus.NHibernate" version="6.2.4" targetFramework="net452" />
   <package id="Topshelf" version="3.2.0" targetFramework="net452" />
 </packages>
