--- a/Hub/packages.config
+++ b/Hub/packages.config
@@ -9,6 +9,7 @@
   <package id="DapperExtensions" version="1.4.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
+  <package id="log4net" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -26,6 +27,7 @@
   <package id="NServiceBus" version="5.2.9" targetFramework="net452" />
   <package id="NServiceBus.Autofac" version="5.0.0" targetFramework="net452" />
   <package id="NServiceBus.Host" version="6.0.0" targetFramework="net452" />
+  <package id="NServiceBus.Log4Net" version="1.0.0" targetFramework="net452" />
   <package id="NServiceBus.NHibernate" version="6.2.5" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
