--- a/Saga/App.config
+++ b/Saga/App.config
@@ -32,6 +32,7 @@
       <add Assembly="Messages" Type="Messages.Commands.InsertDocumentIntoRemoteBackOfficeCommand" Endpoint="Hub" />
       <add Assembly="Messages" Type="Messages.Commands.InsertDocumentIntoOnlineBackOfficeCommand" Endpoint="OnlineBackOffice" />
       <add Assembly="Messages" Type="Messages.Commands.DownloadDocumentCommand" Endpoint="DocumentDownloader" />
+      <add Assembly="Messages" Type="Messages.Commands.SubmitAgreementCommand" Endpoint="Saga" />  
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <TransportConfig MaxRetries="5" MaximumConcurrencyLevel="1" MaximumMessageThroughputPerSecond="2" />
