--- a/Hub/Log4net.config
+++ b/Hub/Log4net.config
@@ -8,8 +8,23 @@
     <!-- log4net configuration when running in debug mode. -->
     <add key="log4net.Internal.Debug" value="true" />
   </appSettings>
-
-  <log4net debug="true">
+<log4net debug="true">
+    <appender name="Logger.Log4NetTraceListener" type="log4net.Appender.RollingFileAppender">
+      <file value="C:\\logs\\Hub\\"/>
+      <appendToFile value="true"/>
+      <filter type="log4net.Filter.LoggerMatchFilter">
+        <loggerToMatch value="Logger.Log4NetTraceListener" />
+      </filter>
+      <filter type="log4net.Filter.DenyAllFilter" />
+      <rollingStyle value="Date"/>
+      <maxSizeRollBackups value="5"/>
+      <maximumFileSize value="10MB"/>
+      <datePattern value="yyyy-MM-dd'-signalRtracing-all.log'" />
+      <staticLogFileName value="false"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%newline %date %level caller:%logger message:%message "/>
+      </layout>
+    </appender>
     <appender name="NHibernate" type="log4net.Appender.RollingFileAppender">
       <file value="C:\\logs\\Hub\\"/>
       <appendToFile value="true"/>
@@ -45,6 +60,10 @@
     <appender name="DebugErrorFileAppender" type="log4net.Appender.RollingFileAppender">
        <file value="C:\\logs\\Hub\\"/>
       <filter type="log4net.Filter.LoggerMatchFilter">
+        <loggerToMatch value="Logger.Log4NetTraceListener" />
+        <acceptOnMatch value="false" />
+      </filter>
+      <filter type="log4net.Filter.LoggerMatchFilter">
         <loggerToMatch value="NHibernate" />
         <acceptOnMatch value="false" />
       </filter>
@@ -74,6 +93,10 @@
     <appender name="InfoFileAppender" type="log4net.Appender.RollingFileAppender">
        <file value="C:\\logs\\Hub\\"/>
       <filter type="log4net.Filter.LoggerMatchFilter">
+        <loggerToMatch value="Logger.Log4NetTraceListener" />
+        <acceptOnMatch value="false" />
+      </filter>
+      <filter type="log4net.Filter.LoggerMatchFilter">
         <loggerToMatch value="NHibernate" />
         <acceptOnMatch value="false" />
       </filter>
@@ -97,6 +120,7 @@
       </layout>
     </appender>
     <root>
+      <appender-ref ref="Logger.Log4NetTraceListener" />
       <appender-ref ref="NServiceBus" />
       <appender-ref ref="NHibernate" />
       <appender-ref ref="DebugErrorFileAppender" />
