--- a/HubSubscriber/HubSubscriber.csproj
+++ b/HubSubscriber/HubSubscriber.csproj
@@ -37,8 +37,9 @@
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Esent.Interop">
-      <HintPath>..\packages\Esent.Interop\Esent.Interop.dll</HintPath>
+    <Reference Include="Esent.Interop, Version=1.8.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\Esent.Interop.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -95,8 +96,6 @@
     <Compile Include="IServiceHost.cs" />
     <Compile Include="Managers\HubConnectionManager.cs" />
     <Compile Include="Managers\IHubConnectionManager.cs" />
-    <Compile Include="Managers\IMessageStore.cs" />
-    <Compile Include="Managers\MessageStoreManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHost.cs" />
@@ -112,9 +111,7 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utilities\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Contracts\Contracts.csproj">
       <Project>{089b41be-70fc-4be0-863f-11a74e98f502}</Project>
@@ -123,6 +120,10 @@
     <ProjectReference Include="..\Logger\Logger.csproj">
       <Project>{e4601311-1bdd-400f-ab4f-b6eb92561155}</Project>
       <Name>Logger</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MessageStore\MessageStore.csproj">
+      <Project>{18db8ded-32d1-4ad9-b57f-032cc6d0eed1}</Project>
+      <Name>MessageStore</Name>
     </ProjectReference>
     <ProjectReference Include="..\Messages\Messages.csproj">
       <Project>{f0b6afa4-4848-4b13-b4cc-a0532866cdea}</Project>
