--- a/MessageStore/MessageStore.csproj
+++ b/MessageStore/MessageStore.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5AD08D9-23FA-454B-8022-E86EA191A3CD}</ProjectGuid>
+    <ProjectGuid>{18DB8DED-32D1-4AD9-B57F-032CC6D0EED1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HubSubscriber.UnitTests</RootNamespace>
-    <AssemblyName>HubSubscriber.UnitTests</AssemblyName>
+    <RootNamespace>MessageStore</RootNamespace>
+    <AssemblyName>MessageStore</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,17 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NServiceBus.Core, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9fc386479f8a226c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NServiceBus.5.2.12\lib\net45\NServiceBus.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.0.5813.39031, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Esent.Interop">
+      <HintPath>..\Lib\Esent.Interop.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,26 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InsertDocumentIntoRemoteBackOfficeCommandHandlerTests.cs" />
+    <Compile Include="Esent.cs" />
+    <Compile Include="IMessageStore.cs" />
+    <Compile Include="MessageStore.cs" />
+    <Compile Include="MessageStoreTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\HubSubscriber\HubSubscriber.csproj">
-      <Project>{099d7993-0968-4bc6-b6a9-310277e55cdb}</Project>
-      <Name>HubSubscriber</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessageStore\MessageStore.csproj">
-      <Project>{18db8ded-32d1-4ad9-b57f-032cc6d0eed1}</Project>
-      <Name>MessageStore</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Messages\Messages.csproj">
-      <Project>{f0b6afa4-4848-4b13-b4cc-a0532866cdea}</Project>
-      <Name>Messages</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
