--- a/HubSubscriber/packages.config
+++ b/HubSubscriber/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="log4net" version="2.0.0" targetFramework="net452" />
+  <package id="ManagedEsent" version="1.9.3.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
